--- a/k8s-manifest/artemis/deployment.yaml
+++ b/k8s-manifest/artemis/deployment.yaml
@@ -101,7 +101,7 @@ spec:
       containers:
       - name: artemis-activemq-metrics-provider
         image: balchu/artemis-ext-scaler
-        args: ["--port","5050","--broker","$(POD_NAME)","--user", "$(ARTEMIS_USERNAME)","--password","${ARTEMIS_PASSWOORD)"]
+        args: ["--port","5050","--broker","$(POD_NAME)","--user", "$(ARTEMIS_USERNAME)","--password","$(ARTEMIS_PASSWORD)"]
         imagePullPolicy: Always
         resources:
           requests:
