--- a/k8s-manifest/consumer-deployment.yaml
+++ b/k8s-manifest/consumer-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: artemis-consumer
-        image: 192.168.1.12:32000/artemis-consumer
+        image: balchu/artemis-consumer
         imagePullPolicy: Always
         env:
         - name: ARTEMIS_PASSWORD
