--- a/producer/src/main/resources/application.yml
+++ b/producer/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   artemis:
     mode: native
-    host: ${ARTEMIS_SERVER_HOST:10.152.183.254}
+    host: ${ARTEMIS_SERVER_HOST:localhost}
     port: ${ARTEMIS_SERVER_PORT:61616}
     user: ${ARTEMIS_USERNAME:artemis}
     password: ${ARTEMIS_PASSWORD:artemis}
