update to keda v2 and artemis 2.15.0

--- a/k8s-manifest/consumer-deployment.yaml
+++ b/k8s-manifest/consumer-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: artemis-consumer
-        image: balchu/artemis-consumer
+        image: balchu/artemis-consumer:d83d80b
         imagePullPolicy: Always
         env:
         - name: ARTEMIS_PASSWORD
