--- a/.github/workflows/master-build.yaml
+++ b/.github/workflows/master-build.yaml
@@ -41,6 +41,8 @@ jobs:
         kubectl create ns artemis
         kubectl -n artemis create secret generic regcred --from-file ~/.docker/config.json
         
+        sudo microk8s status --wait-ready
+
         skaffold run -p metrics-provider 
 
         kubectl -n artemis wait --for=condition=available --timeout=600s deployment/artemis-activemq -n artemis
