--- a/.github/workflows/master-build.yaml
+++ b/.github/workflows/master-build.yaml
@@ -43,7 +43,7 @@ jobs:
         
         sudo microk8s status --wait-ready
 
-        skaffold run -p metrics-provider 
+        skaffold -v trace run -p metrics-provider 
 
         kubectl -n artemis wait --for=condition=available --timeout=600s deployment/artemis-activemq -n artemis
         kubectl -n artemis get pods -o wide
