--- a/.github/workflows/master-build.yaml
+++ b/.github/workflows/master-build.yaml
@@ -16,7 +16,7 @@ jobs:
     
     - uses: balchua/microk8s-actions@v0.1.3
       with:
-        channel: '1.18/stable'
+        channel: '1.19/candidate'
         rbac: 'true'
         dns: 'true'
         storage: 'true'
@@ -36,12 +36,13 @@ jobs:
       env:
         REGCRED: ${{ secrets.regcred }}
       run: |
+        sleep 30 #wait for the cluster to be stable.
+        sudo microk8s status --wait-ready
+        
         mkdir -p ~/.docker/
         echo $REGCRED > ~/.docker/config.json
         kubectl create ns artemis
         kubectl -n artemis create secret generic regcred --from-file ~/.docker/config.json
-        
-        sudo microk8s status --wait-ready
 
         skaffold -v trace --cache-artifacts=false run -p metrics-provider 
 
