--- a/.github/workflows/master-build.yaml
+++ b/.github/workflows/master-build.yaml
@@ -17,7 +17,7 @@ jobs:
     - uses: balchua/microk8s-actions@v0.2.1
       with:
         channel: '1.19/candidate'
-        addons: "['rbac','dns','storage']"
+        addons: '["dns", "rbac", "storage"]'
 
     - name: Get Skaffold
       env:
